syntax = "proto3";

package account;
option go_package ="proto/account";

enum Action {
  CREDIT  = 0;
  DEBIT = 1;
}

message CreateAccountRequest {
  int32 accountId = 1;
}

message CreateAccountResponse {
  int32 code = 1;
  string message = 2;
  AccountData data = 3;
}

message AccountData {
  int32 ac  = 1;
  int32 bc  = 2;
  int64 tx  = 3;
  int64 itx = 4;
  int64 up  = 5;
}

message DepositAccountRequest {
  int32 accountId = 1;
  int32 amount = 2;
}

message DepositAccountResponse {
  int32 code = 1;
  string message = 2;
  AccountData data = 3;
}

message BalanceChangeRequest {
  int32 ac = 1;
  int64 tx = 2;
  int32 am = 3;
  int32 act = 4;
}

message BalanceChangeResponse {
  int32 code = 1;
  string message = 2;
  AccountData data = 3;
 }


service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc BalanceChange(BalanceChangeRequest) returns (BalanceChangeResponse);
}
